# chatsystemserver

./: .gitignore  README.md
Json/: main  main.cc
brpc/: client.cc  server.cc
build2/build2-toolchain-0.17/bdep-0.17.0/bdep/: argument-grouping.o.d  bdep  bdep-options.o.d  bdep.d  bdep.o.d  ci-options.o.d  ci-parsers.o.d  ci-types.o.d  ci.o.d  clean-options.o.d  common-options.o.d  config-options.o.d  config.o.d  database-views-odb.o.d  database.o.d  default-options-files.o.d  deinit-options.o.d  deinit.o.d  diagnostics.o.d  fetch-options.o.d  fetch.o.d  git.o.d  help-options.o.d  help.o.d  http-service.o.d  init-options.o.d  init.o.d  libbdep.u.a.d  new-options.o.d  new-parsers.o.d  new.o.d  project-author.o.d  project-odb.o.d  project-options.o.d  project.o.d  projects-configs.o.d  publish-options.o.d  publish.o.d  release-options.o.d  release-parsers.o.d  (+10 more)
build2/build2-toolchain-0.17/bpkg-0.17.0/bpkg/: archive.o.d  argument-grouping.o.d  auth.o.d  bpkg-options.o.d  bpkg.d  bpkg.o.d  cfg-create-options.o.d  cfg-create.o.d  cfg-info-options.o.d  cfg-info.o.d  cfg-link-options.o.d  cfg-link.o.d  cfg-unlink-options.o.d  cfg-unlink.o.d  checksum.o.d  common-options.o.d  configuration-options.o.d  database.o.d  default-options-files.o.d  diagnostics.o.d  fetch-git.o.d  fetch-pkg.o.d  fetch.o.d  help-options.o.d  help.o.d  libbpkg.u.a.d  manifest-utility.o.d  package-configuration.o.d  package-odb.o.d  package-query.o.d  package-skeleton.o.d  package.o.d  pkg-bindist-options.o.d  pkg-bindist.o.d  pkg-build-collect.o.d  pkg-build-options.o.d  pkg-build.o.d  pkg-checkout-options.o.d  pkg-checkout.o.d  pkg-clean-options.o.d  (+45 more)
build2/build2-toolchain-0.17/build2-0.17.0/build2/: b  b.d  b.o.d
build2/build2-toolchain-0.17/build2-0.17.0/libbuild2/: adhoc-rule-buildscript.so.o.d  adhoc-rule-cxx.so.o.d  adhoc-rule-regex-pattern.so.o.d  algorithm.so.o.d  b-cmdline.so.o.d  b-options.so.o.d  buildspec.so.o.d  common-options.so.o.d  config.hxx.d  context.so.o.d  depdb.so.o.d  diagnostics.so.o.d  dump.so.o.d  dyndep.so.o.d  file-cache.so.o.d  file.so.o.d  filesystem.so.o.d  function.so.o.d  functions-bool.so.o.d  functions-builtin.so.o.d  functions-filesystem.so.o.d  functions-integer.so.o.d  functions-json.so.o.d  functions-name.so.o.d  functions-path.so.o.d  functions-process-path.so.o.d  functions-process.so.o.d  functions-project-name.so.o.d  functions-regex.so.o.d  json.so.o.d  (+25 more)
client/: CMakeLists.txt  debug.h  main.cpp  mainwidget.cpp  mainwidget.h  sessionfriendarea.cpp  sessionfriendarea.h
client/model/: date.h
common/: icsearch.hpp  icsearch_copy.hpp
es/: main  main.cc  test.txt
es/test/: main
odb/: main  main.cc  makefile  person.hxx  person.sql
protobuf/: contacts.proto  main.cc
server/: CMakeLists.txt
server/common/: asr.hpp  channel.hpp  data_es.hpp  data_mysql.hpp  data_redis.hpp  dms.hpp  etcd.hpp  icsearch.hpp  logger.hpp  mysql.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_user.hpp  rabbitmq.hpp  utils.hpp
server/es/: main  test.txt
server/es/test/: makefile
server/example/: discovery.cc
server/example/brpc/: main.proto  makefile
server/example/common/: channel.hpp  etcd.hpp  icsearch.hpp  rabbitmq.hpp
server/example/dms/: makefile  test.cc
server/example/es/: main  main.cc  makefile
server/example/example/: makefile  registrant.cc  test.cc
server/example/httplib/: main.cc
server/example/mq/: consume  consume.cc  makefile  publish  publish.cc
server/example/redis++/: makefile
server/example/speech/: main.cc
server/file/: CMakeLists.txt
server/file/source/: file_server.cc  file_server.hpp
server/file/test/: file_client.cc
server/httplib/: main  makefile
server/json/: main.cc  makefile
server/message/: CMakeLists.txt
server/message/source/: message_server.cc  message_server.hpp
server/message/test/: message_client.cc
server/mq/: consume  consume.cc  publish  publish.cc
server/mq/test/: consume  makefile  publish  publish.cc
server/odb/: chat_session_member.hxx  message.hxx  person-odb.hxx  user.hxx
server/odb/test1/: main  main.cc  person.hxx  person.sql
server/odb/test2/: main  main.cc  makefile  student-odb.cxx  student-odb.hxx  student.hxx
server/proto/: base.proto  file.proto  friend.proto  gateway.proto  message.proto  speech.proto  transmite.proto  user.proto
server/protobuf/: main
server/redis++/: main  main.cc
server/spdlog/: async  logger.hpp  makefile  sync  sync.cc
server/speech/: CMakeLists.txt  makefile
server/speech/source/: speech_server.cc  speech_server.hpp
server/speech/test/: speech_client.cc
server/transmite/: CMakeLists.txt
server/transmite/source/: transmite_server.cc  transmite_server.hpp
server/transmite/test/: transmite_client.cc  user_client.cc
server/user/: CMakeLists.txt
server/user/source/: user_server.cc  user_server.hpp
server/user/test/: user_client.cc
server/user/test/es_test/: main  main.cc  makefile
server/user/test/mysql_test/: main.cc  makefile  user-odb.cxx  user-odb.hxx  user-odb.ixx  user.sql
server/user/test/redis_test/: main  main.cc  makefile
server/websocketpp/: client_test_for_websocketpp.html  main  main.cc
spdlog/: async.cc  main  main.cc
(+2148 files in other folders)
